--- a/Day 40/Recipe for a good code challenge/index.html
+++ b/Day 40/Recipe for a good code challenge/index.html
@@ -15,7 +15,6 @@
     <ul>
       <li>Great interest for a topic (that can survive outside of the work context)</li>
       <li>Humility towards your learning capacities</li>
-      <li>A project that you can showcase at the end of your challenge</li>
       <li>A bunch a equally motivated companions</li>
     </ul>
     <h2>Method</h2>
@@ -25,7 +24,7 @@
     to reach the advanged level at the end of the 100 days)
       <li>Find a great resource you can learn from (a MOOC, an vido tutorial series, or a book - books
     are great way to get your face off the screen!)
-      <li>Break it down into one hundred pieces (and evaluate if is too much or too little for 100 days)
+      <li>Break it down into one hundred pieces (and evaluate if it is too much or too little for 100 days)
       <li>Commit to 1 piece a day (more than one is fine - but the key idea here is <em>endurance</em> so make sure you don't use up all
     your mental ressources for the next day)
       <li>Share daily with your learning companions for accountability
