Functions : roll a dice

--- a/Day 39/First HTML code/index.html
+++ b/Day 39/First HTML code/index.html
@@ -8,9 +8,8 @@
     <script src="../addons/p5.sound.min.js"></script>
     <script src="sketch.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oswald|Source+Sans+Pro" rel="stylesheet">
-    <title> Mathou code </title>
+    <title> Mathilde's 100 days of code </title>
   </head>
-  <title> Mathilde's 100 days of code </title>
   <body>
     <h1> 100 days of code </h1>
     <p> Presented on this website are visual projects
@@ -20,7 +19,7 @@
 
     <h2> Why starting to code? </h2>
     <p> I think it is a mix of professional pragmatism and me wanting
-    to express myself artistically. </p>
+    to express myself creatively. </p>
 
     <h2> Was it hard? </h2>
     <p> Yes and no. It is really true that you just need <em> 21 days </em>
@@ -30,7 +29,7 @@
     The challenge started with my co-workers ot Mimi. After 10 days, we were
     2 people left out of 8. The last colleague "alive", Kevin, took a break
     arund Christmas time and I wasn't sure whether he vould come back.
-    My motivation seriouslyflickered at that moment.
+    My motivation seriously flickered at that moment.
     <del>I harrassed him day and night so he would continue. </del>Luckily he resumed the
     challenge quickly. </p>
 
