--- a/Day 40/Recipe for a good code challenge/index.html
+++ b/Day 40/Recipe for a good code challenge/index.html
@@ -19,9 +19,9 @@
     </ul>
     <h2>Method</h2>
     <ol>
-      <li>Pick a topic you have a great interest in
+      <li>Pick a topic you have great interest in
       <li>Define the scope of your learning realistically (if you are a beginner, don't aim
-    to reach the advanged level at the end of the 100 days)
+    to reach the advanced level at the end of the 100 days)
       <li>Find a great resource you can learn from (a MOOC, an vido tutorial series, or a book - books
     are great way to get your face off the screen!)
       <li>Break it down into one hundred pieces (and evaluate if it is too much or too little for 100 days)
