Playing aaround with images

--- a/Day 49 + 50/thehumanbehind.html
+++ b/Day 49 + 50/thehumanbehind.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h1>The Human Behind</h1>
-    <p> Mathilde, painting soundscapes with code full-time. Also a user researcher full time, just in another dimension.
+    <p> Mathilde, painting soundscapes with code. Also a service designer/user researcher in another dimension.
     <p> <a href="mailto:mathilde.dongala@gmail.com">Contact the Human </a></p>
     </p>
   </body>
