--- a/Day 49 + 50/index.html
+++ b/Day 49 + 50/index.html
@@ -10,10 +10,15 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald|Source+Sans+Pro" rel="stylesheet">
   </head>
   <body>
-    <h1>Lukei</h1>
-    <p> Ambient sketches </p>
-    <p> <img src="images/rockzoom.jpg" alt="probably a microscopic view of a rock" title="a microscopic view of a rock with beautiful
-       shades of grey and purple"/>
+    <h1>
+      <img src="Images/logo.png" alt = "logo reading lukei"> </img>
+    </h1>
+    <p> Sketches with p5.js </p>
+    <p>
+      <figure>  <img src="Images/rockzoom.jpg" alt="probably a microscopic view of a rock"> </img>
+        <figcaption> The abstract, ambient yet very organic type of visuals I'd like end up with.
+        </figcaption>
+      </figure>
     <ul>
     <li><a href="projects.html">Projects </a></li>
     <li><a href="thehumanbehind.html">The Human Behind </a> </li>
