cleaning up and playing with images

--- a/Day 49 + 50/index.html
+++ b/Day 49 + 50/index.html
@@ -10,20 +10,27 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald|Source+Sans+Pro" rel="stylesheet">
   </head>
   <body>
-    <h1>
-      <img src="Images/logo.png" alt = "logo reading lukei"> </img>
-    </h1>
-    <p> Sketches with p5.js </p>
     <p>
-      <figure>  <img src="Images/rockzoom.jpg" alt="probably a microscopic view of a rock"> </img>
-        <figcaption> The abstract, ambient yet very organic type of visuals I'd like end up with.
-        </figcaption>
+      <figure>
+      <img src="Images/logo.png" alt = "logo reading lukei"> </img>
       </figure>
-    <ul>
-    <li><a href="projects.html">Projects </a></li>
-    <li><a href="thehumanbehind.html">The Human Behind </a> </li>
-    <li><a href="resources.html">Resources </a></li>
-    <ul/>
+    </p>
+    <p>
+      <figure>
+        <img src="Images/rockzoom.jpg" alt="probably a microscopic view of a rock"> </img>
+      </figure>
+      <figure>
+        <img src="Images/rect1.png" alt = "detail of main picture1"> </img>
+        <figcaption><a href="projects.html">Projects </a></figcaption>
+      </figure>
+      <figure>
+        <img src="Images/rect2.png" alt = "detail of main picture 2"> </img>
+        <figcaption><a href="thehumanbehind.html">The Human Behind </a></figcaption>
+      </figure>
+      <figure>
+        <img src="Images/rect3.png" alt = "detail of main picture 3"> </img>
+        <figcaption><a href="resources.html">Resources </a></figcaption>
+      </figure>
     </p>
 
   </body>
