HTML: Creating tables, p5.js: revising basics

--- a/Day 52/Website/index.html
+++ b/Day 52/Website/index.html
@@ -31,6 +31,9 @@
         <img src="Images/rect3.png" alt = "detail of main picture 3"> </img>
         <figcaption><a href="resources.html">Resources </a></figcaption>
       </figure>
+      <figure>
+      <img src="Images/rect3.png" alt = "detail of main picture3" </img>
+      <figcaption><a href="playinghours.html" >Office hours</a></figcaption>
     </p>
 
   </body>
