HTML: Creating tables, p5.js: revising basics

--- a/Day 52/Website/index.html
+++ b/Day 52/Website/index.html
@@ -33,7 +33,7 @@
       </figure>
       <figure>
       <img src="Images/rect3.png" alt = "detail of main picture3" </img>
-      <figcaption><a href="playinghours.html" >Office hours</a></figcaption>
+      <figcaption><a href="playinghours.html" >Playing hours</a></figcaption>
     </p>
 
   </body>
