--- a/Day 57/secretroom.html
+++ b/Day 57/secretroom.html
@@ -13,8 +13,11 @@
     <img src="Images/secretroom.gif" alt= "black tunnel with star ceiling"> </img>
     <form action = "www.myfakeserver.php">
     <p> Username:
-      <input type = "text name" = "Username"/> </p>
+      <input type = "text name" = "Username"/>
+    </p>
     <p> Password:
-      <input type = "password" name = "Password"/> </p>
+      <input type = "password" name = "Password"/>
+    </p>
     </form>
+  </body>
 </html>
