--- a/Day 41/Writing links/index.html
+++ b/Day 41/Writing links/index.html
@@ -10,25 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald|Source+Sans+Pro" rel="stylesheet">
   </head>
   <body>
-    <h1>Recipe for a successful 100-day code challenge</h1>
-    <h2>Ingredients</h2>
+    <h1>Resources</h1>
+    <p>Here are books websites where you can get great references to learn</p>
     <ul>
-      <li>Great interest for a topic (that can survive outside of the work context)</li>
-      <li>Humility towards your learning capacities</li>
-      <li>A bunch a equally motivated companions</li>
+    <li><a>href=https://p5js.org/> Processing foundation's website</a></li>
     </ul>
-    <h2>Method</h2>
-    <ol>
-      <li>Pick a topic you have great interest in
-      <li>Define the scope of your learning realistically (if you are a beginner, don't aim
-    to reach the advanced level at the end of the 100 days)
-      <li>Find a great resource you can learn from (a MOOC, an vido tutorial series, or a book - books
-    are great way to get your face off the screen!)
-      <li>Break it down into one hundred pieces (and evaluate if it is too much or too little for 100 days)
-      <li>Commit to 1 piece a day (more than one is fine - but the key idea here is <em>endurance</em> so make sure you don't use up all
-    your mental ressources for the next day)
-      <li>Share daily with your learning companions for accountability
-      <li>Bonus: the cliffhanger technique. Skim through the challenge of the next day to get excited and sleep on it
-    </ol>
-    </body>
 </html>
