--- a/Day 48/My website/projects.html
+++ b/Day 48/My website/projects.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <h1> Projects </h1>
-    <p> A selection of my most honest projects, using p5.js (with a sprinkle of HTML and CSS)</p>
+    <p> A selection of my most honest projects, using p5.js (with a sprinkle of HTML and CSS).</p>
   </body>
 </html>
